ProductionBackUp/src/objects/Proposal__c.object
<CustomObject>
    <description>Proposals are a product or service configuration offered to a customer at a set price, similar to a quote. Proposals are mastered in Amdocs and synced with Salesforce.  Proposals are associated to opportunities.</description>
    <fields>
        <fullName>Amdocs_Account_Id__c</fullName>
        <description>AA: 3/29/17 Created to Capture Amdocs Account Id for Proposal Upsert.</description>
        <externalId>true</externalId>
        <label>Amdocs Account Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amdocs_Proposal_Id__c</fullName>
        <description>AA: 3/29/17: Created to Capture Amdocs Proposal Id</description>
        <externalId>true</externalId>
        <label>Amdocs Proposal Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <label>Created By User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incremental_MRC__c</fullName>
        <label>Incremental MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <label>MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRC__c</fullName>
        <label>NRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposals and Agreements</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Site_Count__c</fullName>
        <description>AA: 3/29/17: Created for IDD 004 Proposal Upsert</description>
        <label>Site Count</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>PendingInternalApprovalRules</fullName>
                </value>
                <value>
                    <fullName>InternalApprovalRulesCompleted</fullName>
                </value>
                <value>
                    <fullName>PendingInternalApproval</fullName>
                </value>
                <value>
                    <fullName>ApprovedInternally</fullName>
                </value>
                <value>
                    <fullName>RejectedInternally</fullName>
                </value>
                <value>
                    <fullName>SendToCustomer</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>RejectedByCustomer</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Unit__c</fullName>
        <label>Term Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_By_User__c</fullName>
        <label>Updated By User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>concat__c</fullName>
        <externalId>true</externalId>
        <label>concat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proposalcustom__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>proposalcustom</label>
        <type>Text</type>
    </fields>
    <label>Proposal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Amdocs_Account_Id__c</columns>
        <columns>Amdocs_Proposal_Id__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Updated_By_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Proposal/Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>